# vale-python-package

./: .gitignore  CHANGELOG.md  CREDITS.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  support.py
.github/workflows/: check-vale-update.yml  publish.yml  python-publish.yml  test-mac.yml  test-win.yml  test.yml
vale/: main.py  vale_bin
